--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ h1 {
 
 <h1>B10815034</h1>
 <p>段落</p>
-<a href="網址">連結</a>
+<a href="https://www.youtube.com/watch?v=5e0yOKfrPAQ">沒料饅頭</a>
 <br>
 <br>
 <button onclick="click()">點擊我</button>
