--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@ h1 {
 <a href="https://www.youtube.com/watch?v=5e0yOKfrPAQ">沒料饅頭</a>
 <br>
 <br>
-
-<script language="javascript">
-function click() {
-  alert('嘗試執行 JavaScript');
-}
+<button onclick="Myclick()">點擊我</button>
+<script>
+        function Myclick() {
+            window.open('https://www.youtube.com/watch?v=ov_J4fVTKWo', '_blank');
+        }
 </script>
-<button onclick="click()">點擊我</button>
+
 
 </body>
 </html>
