--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<html>
+<html>
 <head>
 <title>B10815034</title>
 <style>
@@ -14,12 +14,13 @@ h1 {
 <a href="https://www.youtube.com/watch?v=5e0yOKfrPAQ">沒料饅頭</a>
 <br>
 <br>
-<button onclick="Myclick()">點擊我</button>
-<script>
-        function Myclick() {
-            window.open('https://www.youtube.com/watch?v=ov_J4fVTKWo', '_blank');
+<button onclick="Click()" style="color: limegreen;">tozy對此的回應</button>
+    <script>
+        function Click() {
+
+            window.open('https://youtu.be/dQw4w9WgXcQ?autoplay=1', '_blank');
         }
-</script>
+    </script>
 
 
 </body>
