--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ h1 {
             window.open('https://www.youtube.com/watch?v=ov_J4fVTKWo', '_blank');
         }
     </script>
+<img src="https://i.ytimg.com/vi/DIzQRZ-xcO0/maxresdefault.jpg">
 
 
 </body>
